Ignore reports from low resolution clocks for Blink.UpdateTime metrics.

This patch ignores reports from machines where
TimeTicks::IsHighResolution returns false, since they mostly add
noise.

Bug: 867131

Change-Id: I8f341e3db978af82b30d68a43c984875fede7435
Reviewed-on: https://chromium-review.googlesource.com/1148778
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578093}
Former-commit-id: 1db2b3a1989d8e728e07c8c4a1e2c8e917dd0cb9